2025-01-13  Araki Ken  <arakiken@users.sf.net>

	* ci.yml: Add "Upload artifacts" to build-msys2.

	* vte.c: vt_term_destroy() -> vt_destroy_term() to remove a zombie term
	  in a terms list of vt_term_manager.

	* vt_term_manager.c:
	  Don't execute "terms[idx * MTU + count] = terms[--num_terms]"
	  if zombie_pty is 1.
	  (Revert 8f0bffe45c7db21d9af32bf696d57c9e47e6de0c commit)

	* vt_term.h: Add vt_term_is_zombie().

2025-01-12  Araki Ken  <arakiken@users.sf.net>

	* vte.c: Add type casting between pid_t (== integer) and
	  GPid (== HANDLE in win32)

	* vte_win32.c: Add type casting to suppress compiling error.

	* bl_map.c, bl_path.c, c_imagelib.c, data_entry_radio.c,
	  ef_xct_conv.c, im_kbd.c, vterm.c, mc_io_file.c,
	  beos/ui_imagelib.c, console/ui_imagelib.c,
	  fb/ui_font.c, fb/ui_imagelib.c, quartz/ui_imagelib.c,
	  ui_picture.c, win32/ui_imagelib.c, vt_char_encoding.c,
	  vt_parser.c:
	  Add "#include <strings.h>" for strcasecmp.
	  (https://github.com/arakiken/mlterm/issues/129)

	* ci.yml: Add "(cd gtk && make && make install)" to build-netbsd,
	  build-freebsd and build-msys2 targets.

2025-01-11  Araki Ken  <arakiken@users.sf.net>

	* ui_sample_sb_view_lib_win32.c:
	  Add type casting to suppress compiling errors.

	* win32/ui_font.c, ui_screen.c, win32/ui.h, win32/ui_dnd.c,
	  beos/ui_font.c, win32/ui_imagelib.c:
	  Add type casting to suppress compiling errors.

	* win32/ui_connect.c, win32/ui_selection_encoding.c,
	  win32/ui_window.c, libptyssh/vt_pty_ssh.c:
	  Add type casting to suppress compiling errors.

2025-01-07  Araki Ken  <arakiken@users.sf.net>

	* ui_picture.c, win32/ui_window.c, vt_term.c: Add type casting from
	  uintptr_t to HANDLE for the return value of _beginthreadex.

	* libptyssh/vt_pty_ssh.c: Add type casting from vt_pty_t* to vt_pty_ssh_t*
	  in calling scp_stop().

	* libptyssh/vt_pty_ssh.c: Add type casting from uintptr_t to HANDLE for
	  the return value of _beginthreadex.

	* libptyssh/vt_pty_ssh.c: Add const.
