@@ -16,53 +16,63 @@ jobs:
       options: --privileged
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: setup build environment
-      run: |
-        case "${{ matrix.container }}" in
-        ubuntu*|debian*)
-          apt update
-          apt upgrade -y
-          apt install -y build-essential flex libutempter-dev libgtk-3-dev libvterm-dev libvte-2.91-dev libsdl2-dev libfribidi-dev libuim-dev libfcitx5core-dev libfcitx5gclient-dev libscim-dev libibus-1.0-dev libm17n-dev libwnn-dev libcanna1g-dev libssh2-1-dev curl
-          ;;
-        archlinux*)
-          pacman -Syyu --noconfirm base-devel intltool libutempter wayland gtk3 libvterm vte3 sdl2 fribidi fcitx5 fcitx5-gtk scim ibus m17n-lib libssh2 curl
-          ;;
-        esac
+      - name: setup build environment
+        run: |
+          case "${{ matrix.container }}" in
+          ubuntu*|debian*)
+            apt update
+            apt upgrade -y
+            apt install -y build-essential flex libutempter-dev libgtk-3-dev libvterm-dev libvte-2.91-dev libsdl2-dev libfribidi-dev libuim-dev libfcitx5core-dev libfcitx5gclient-dev libscim-dev libibus-1.0-dev libm17n-dev libwnn-dev libcanna1g-dev libssh2-1-dev curl
+            ;;
+          archlinux*)
+            pacman -Syyu --noconfirm base-devel intltool libutempter wayland gtk3 libvterm vte3 sdl2 fribidi fcitx5 fcitx5-gtk scim ibus m17n-lib libssh2 curl
+            ;;
+          esac
 
-    - name: configure
-      run: |
-        (cd uitoolkit/wayland && sh ./rescanproto.sh)
-        CONFIGURE_ARGS="--with-gui=xlib,fb,console,wayland,sdl2"
-        CFLAGS="-Wall -Werror=incompatible-pointer-types -g -O2" ./configure ${CONFIGURE_ARGS}
+      - name: configure
+        run: |
+          (cd uitoolkit/wayland && sh ./rescanproto.sh)
+          CONFIGURE_ARGS="--with-gui=xlib,fb,console,wayland,sdl2"
+          CFLAGS="-Wall -Werror=incompatible-pointer-types -g -O2" ./configure ${CONFIGURE_ARGS}
 
-    - name: build
-      run: |
-        make
-        make install
-        (cd libvterm && make && make install)
-        (cd gtk && make && make install)
+      - name: build
+        run: |
+          make
+          make install
+          (cd libvterm && make && make install)
+          (cd gtk && make && make install)
 
   build-macos:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: setup build environment
-      run: |
-        brew install pkg-config
+      - name: setup build environment
+        run: |
+          brew install pkg-config gtk+3
  
-    - name: configure
-      run: |
-        CONFIGURE_ARGS="--with-gui=quartz"
-        CFLAGS="-Wall -Werror=incompatible-pointer-types -g -O2" ./configure ${CONFIGURE_ARGS}
+      - name: configure
+        run: |
+          CONFIGURE_ARGS="--prefix=~/mlterm --with-gui=quartz"
+          CFLAGS="-Wall -Werror=incompatible-pointer-types -g -O2" ./configure ${CONFIGURE_ARGS}
 
-    - name: build
-      run: |
-        make
-        sudo make install
+      - name: build
+        run: |
+          make
+          sudo make install
+	  cp -R cocoa/mlterm.app ~/
+          cocoa/install.sh ~/mlterm
+          mkdir dist
+          mv ~/mlterm.app dist/
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: mlterm-macos
+          path: dist/**
 
   build-netbsd:
     name: "build-netbsd (NetBSD/amd64 10.1 with pkgsrc)"
@@ -135,5 +145,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: mlterm-win32
+          name: mlterm-mingw-w64
           path: dist/**
